<resources>
    <string name="app_name">EdukasiKesehatanKejiwaan</string>
    <string name="edukasi_kesehatan_mental_remaja">Edukasi Kesehatan Mental Remaja</string>
    <string name="calender_mood">Calender mood</string>
    <string name="artikel_kesehatan">Artikel kesehatan</string>
    <string name="konsultasi">Lokasi Konsultasi</string>
    <string name="telepon_bantuan">Telepon bantuan</string>
    <string name="add">Pilih tanggal</string>
    <string name="apa_kabar_kamu_hari_ini">Apa kabar kamu hari ini?</string>
    <string name="sedang_memproses">sedang memproses</string>
    <string name="masukkan_nama">Masukkan email</string>
    <string name="masuk">Masuk</string>
    <string name="telpon_bantuan">Telpon Bantuan</string>
    <string name="suicide_call">Telefon Bantuan</string>
    <string name="polisi">Polisi</string>
    <string name="ambulance">Ambulance</string>
    <string name="puskesmas">Puskesmas</string>
    <string name="rumah_sakit">Rumah Sakit</string>
    <string name="spesialis">Spesialis</string>
    <string name="psikiater">Psikiater</string>
    <string name="psikolog">Psikolog</string>
    <string name="nomer_polisi">Nomer Polisi</string>
    <string name="polrestabes_makassar">Polrestabes Makassar</string>
    <string name="polsek_panakukang">Polsek Panakukang</string>
    <string name="polsek_biringkanaya">Polsek Biringkanaya</string>
    <string name="polsek_tallo">Polsek Tallo</string>
    <string name="polsek_tamalanrea">Polsek Tamalanrea</string>
    <string name="polsek_manggala">Polsek Manggala</string>
    <string name="polsek_mariso">Polsek Mariso</string>
    <string name="polsek_makassar">Polsek Makassar</string>
    <string name="polsek_mamajang">Polsek Mamajang</string>
    <string name="polsek_bontoala">Polsek Bontoala</string>
    <string name="polsek_ujung_pandang">Polsek Ujung Pandang</string>
    <string name="polsek_ujung_tanah">Polsek Ujung Tanah</string>
    <string name="polsek_wajo">Polsek Wajo</string>
    <string name="polsek_soekarno_hatta">Polsek Soekarno Hatta</string>
    <string name="polsek_paotere">Polsek Paotere</string>
    <string name="daftar">Daftar Sebagai Siswa</string>
    <string name="daftar_sebagai_guru">Daftar Sebagai Guru</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="email_gmail">Gmail</string>
</resources>