<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".teleponBantuan.PolisiActivity">
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:gravity="center_vertical"
        android:text="@string/nomer_polisi"
        android:background="@color/teal_700" />
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:paddingBottom="50dp"
        android:layout_height="match_parent">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:padding="15dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pMakassar"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polrestabes_makassar"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pPanakukang"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_panakukang"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pBiringkanaya"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_biringkanaya"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pTallo"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_tallo"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pTamalanrea"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_tamalanrea"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pManggala"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_manggala"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pMariso"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_mariso"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/psMakassar"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_makassar"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pMamajang"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_mamajang"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pBontoala"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_bontoala"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pUjungPandang"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_ujung_pandang"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pUjungTanah"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_ujung_tanah"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pWajo"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_wajo"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pSoekarnoHatta"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_soekarno_hatta"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:textSize="16sp"
                android:id="@+id/pPaotere"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:background="@drawable/bg_balon"
                android:text="@string/polsek_paotere"
                android:textColor="@color/black"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:layout_height="45dp"
                android:paddingStart="20dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.appcompat.widget.LinearLayoutCompat>