<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    android:padding="15dp"
    tools:context=".teleponBantuan.TeleponBantuanActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:text="@string/telpon_bantuan"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/sCall"
        android:gravity="center"
        android:background="@drawable/bg_text_content"
        android:layout_marginTop="50dp"
        android:layout_height="150dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:src="@drawable/balon"
            android:padding="10dp"
            android:background="@drawable/bg_balon"
            android:layout_height="70dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/suicide_call"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/polis"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/bg_text_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/medal">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/polisi"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:id="@+id/ambulance"
        android:gravity="center"
        android:background="@drawable/bg_text_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/ambulance">
        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/ambulance"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>