<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/teal_200"
    tools:context=".konsul.KonsultasiActivity">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="25dp"
        android:layout_height="55dp"
        android:paddingStart="10dp"
        android:paddingEnd="25dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="35dp"
            android:id="@+id/imgBack"
            android:src="@drawable/ic_back_left"
            android:layout_height="35dp"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:text="@string/konsultasi"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="end"
            android:layout_height="wrap_content"/>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/puskesmas"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_item_konsul"
        android:layout_marginEnd="15dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/pus"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/puskesmas"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_lanjut"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/rmSakit"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_item_konsul"
        android:layout_marginEnd="15dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/rms"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/rumah_sakit"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_lanjut"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/psiko"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_item_konsul"
        android:layout_marginEnd="15dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/psikolog"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/psikolog"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_lanjut"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:id="@+id/psiki"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:background="@drawable/bg_item_konsul"
        android:layout_marginEnd="15dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bg_balon"
            android:padding="10dp"
            android:src="@drawable/psikiater"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:text="@string/psikiater"
            android:textStyle="bold"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="18sp"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:gravity="end"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:padding="10dp"
                android:src="@drawable/ic_lanjut"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>