<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/teal_700"
    android:gravity="center_horizontal"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_marginRight="35dp"
            android:id="@+id/cvCalender"
            android:padding="15dp"
            app:cardCornerRadius="15dp"
            android:layout_height="210dp"
            android:layout_marginEnd="35dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:background="#FFE8EEF3"
                    android:src="@drawable/calender"
                    android:layout_height="160dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/calender_mood"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/cvArtikel"
            android:padding="15dp"
            app:cardCornerRadius="15dp"
            android:layout_height="210dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:background="#FFE8EEF3"
                    android:src="@drawable/artikel"
                    android:layout_height="160dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/artikel_kesehatan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_marginRight="35dp"
            android:id="@+id/cvKonsul"
            android:padding="15dp"
            app:cardCornerRadius="15dp"
            android:layout_height="210dp"
            android:layout_marginEnd="35dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:background="#FFE8EEF3"
                    android:src="@drawable/konsul"
                    android:layout_height="160dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/konsultasi"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:id="@+id/cvPhone"
            android:padding="15dp"
            app:cardCornerRadius="15dp"
            android:layout_height="210dp">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:background="@color/white"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:background="#FFE8EEF3"
                    android:src="@drawable/telpon"
                    android:layout_height="160dp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/telepon_bantuan"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>